--- a/style/style.css
+++ b/style/style.css
@@ -256,3 +256,14 @@ font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
     }
+
+    .third-succ{
+        width: 946px;
+        height: 336px;
+        display: flex;
+        padding: 48px;
+        margin: 32px 0px;
+        border: 2px solid black;
+        background-color: #FFFFFF;
+        border-radius: 16px;
+    }
