--- a/style/style.css
+++ b/style/style.css
@@ -283,7 +283,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 padding: 0px;
-border: 2px solid red;
+/* border: 2px solid red; */
 margin-top: 108px;
 
      }
@@ -305,3 +305,25 @@ font-weight: 400;
 margin-top: 40px;
 
      }
+
+     .youtube-link{
+       
+        border-radius: 16px;
+        margin-right: 100px;
+     }
+
+    .for-link{
+        position: static;
+width: 1140px;
+height: 514px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+padding: 32px;
+box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.2);
+border-radius: 16px;
+border: 2px solid red;
+margin-top: 50px;
+    }
