--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body{
 
 .first{
     margin-bottom: 1px;
-
+        
 }
 
 /* nav styles starts here*/
@@ -25,6 +25,7 @@ body{
     .nav-title{
         font-weight: bolder;
         font-size: 28px;
+        margin-right: 100px;
     }
     nav ul li{
         list-style: none;
@@ -40,7 +41,7 @@ body{
         /* background-color: #0D1321; */
         font-weight: 600;
         font-size: 20px;
-        
+        margin-left: 650px;
         padding: 17px 24px;
         box-sizing: border-box;
         border: 1px solid rgb(13, 19, 33);
@@ -493,66 +494,39 @@ margin-left: 170px;
 height: 58px;
 border-radius: 8px;
 background: rgb(255, 255, 255);
+
      }
 
+     
 
-     div li{
-        list-style: none;
-        text-decoration: none;
-        text-decoration-style: none;
-     }
 
-     /* .area-last{
+     .lastiya{
         display: flex;
         align-items: center;
         justify-content: space-between;
-     } */
+        margin: 50px 150px;
 
+     }
 
-            .icon{
-                margin-left: 95px;
-                margin-top: 20px;
-                width: 1140px;
-height: 100px;
-top: 5145px;
-/* display: flex; */
-/* flex-direction: column; */
-/* justify-content: center; */
-border-radius: 16px;
-background: rgba(13, 19, 33, 0.03);
-/* border: 2px solid red; */
+     .footer-container{
+        height: 100px;
+        width: 1130px;
+        margin-left: 100px;
+        background-color: #0c0f1408;
+        border-radius: 15px;
+        /* border: 2px solid red; */
+        align-items: ;
+        margin-top: 50px;
+     }
+
+        .first-footer-icon, .iconsec{
+            margin-left: 180px;
+            margin-top: 40px;
+            display: inline-block;
+            vertical-align: top;
+        }
+
+            .first-footer-icon{
+                color: #0D1321;
             }
-
-     /* .lik{
-        list-style: none;
-        text-decoration: none;
-        margin-left: 850px;
-     } */
-
-     /* .like-two{
-        list-style: none;
-        text-decoration: none;
-        margin-left: 1100;
-     } */
-
-     .maraton{
-        margin-left: 950px;
-     }
-        
-     }
-
-     /* .marathon-two{
-        margin-left: 1020px;
-        margin-bottom: 20px;
-     } */
-
-     /* .leatest-h{
-        margin-top: 20px;
-     } */
-
-   .last-abd{
-    width: 390px;
-height: 24px;
-font-size: 50px;
-margin-top: 20px;
-   }
+       
